# python_plugin_example

./: LICENSE  README  pyproject.toml
python_plugin_example/: hookimpl.py  hookspec.py  main.py
python_plugin_example/plugins/: chucknorris.py  icanhazdadjoke.py
